<resources>
    <string name="app_name">Моё сердце</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_empty_fields">Пожалуйста, заполните все поля</string>
    <string name="razrabotka">В разработке...</string>
    <string name="error_passwords_are_not_same">Пароли не совпадают</string>
    <string name="successful_registration">Регистрация прошла успешно!</string>
    <string name="e_mail">E-mail</string>
    <string name="email_hint">MyEmail.ru</string>
    <string name="password">Пароль</string>
    <string name="sign_in">Вход</string>
    <string name="send">Отправить</string>
    <string name="password_dots">•••••••••</string>
    <string name="error_wrong_login_or_password">Неверное имя пользователя или пароль</string>
    <string name="home">Главная</string>
    <string name="calendar">Калькулятор</string>
    <string name="content">Контент</string>
    <string name="analyzes">Анализы</string>
    <string name="profile">Профиль</string>
    <string name="sos">Вызов Помощи</string>
    <string name="info_title1">Что это значит?</string>
    <string name="info_desc1_red">Красная зона говорит о критическом состоянии сердечно сосудистой системы\n\nсоветуем срочно обратиться к врачу, а если вы посетили врача, советуем ознакомиться со статьей и видеоматериалами ниже</string>
    <string name="info_title2">Статья по заболеванию</string>
    <string name="info_desc2">Равным образом начало повседневной работы по формированию позиции играет важную роль в формировании направлений прогрессивного развития.\n\nПовседневная практика показывает, что постоянный количественный рост и сфера нашей активности позволяет оценить значение позиций, занимаемых участниками в отношении поставленных задач.\n\nПовседневная практика показывает, что рамки и место обучения кадров позволяет оценить значение дальнейших направлений развития. Не следует, однако забывать, что начало повседневной работы по формированию позиции в значительной степени обуславливает создание новых предложений. Значимость этих проблем настолько очевидна, что рамки и место обучения кадров позволяет выполнять важные задания по разработке систем массового участия.</string>
    <string name="info_desc1_yellow">Внимание - эта зона является предупреждением</string>
    <string name="info_desc1_green">Все понятно - эта зона является вашей целью</string>
    <string name="submit">Подтвердить</string>
    <string name="all_day">Весь день</string>
    <string name="morning">Утром</string>
    <string name="afternoon">День</string>
    <string name="evening">Вечер</string>
    <string name="monday">ПН</string>
    <string name="tuesday">ВТ</string>
    <string name="wednesday">СР</string>
    <string name="thursday">ЧТ</string>
    <string name="friday">ПТ</string>
    <string name="saturday">СБ</string>
    <string name="sunday">ВС</string>
    <string name="_00_00">00:00</string>
    <string name="date">Дата</string>
    <string name="save">Сохранить</string>
    <string name="content_screen_title">Выберите интересующую вас статью</string>
    <string name="categories_screen_title">Выберите </string>
    <string name="detail_article_screen_title">Статья по заболеванию</string>
    <string name="sample_article">Равным образом начало повседневной работы по формированию позиции играет важную роль в формировании направлений прогрессивного развития. Повседневная практика показывает, что постоянный количественный рост и сфера нашей активности позволяет оценить значение позиций, занимаемых участниками в отношении поставленных задач.Повседневная практика показывает, что рамки и место обучения кадров позволяет оценить значение дальнейших направлений развития. Не следует, однако забывать, что начало повседневной работы по формированию позиции в значительной степени обуславливает создание новых предложений. Значимость этих проблем настолько очевидна, что рамки и место обучения кадров позволяет выполнять важные задания по разработке систем массового участия.</string>
    <string name="analyzes_title">Проверка анализов</string>
    <string name="analyzes_subtitle">Введите код, полученный при\nпроведении лечения</string>
    <string name="diagnosis_red_zone">Вы попали в красную зону</string>
    <string name="diagnosis_yellow_zone">Вы попали в жёлтую зону</string>
    <string name="diagnosis_green_zone">Вы попали в зелёную зону</string>
    <string name="red_zone_description">Вам трудно дышать, непрекращающаяся одышка, вы сидите неподвижно на стуле/ в кресле.\nБоль в груди.</string>
    <string name="yellow_zone_description">Вы прибавляете в весе  700–1200г в день или  Вы зафиксировали увеличение веса на 2 кг и больше в неделю.\n\nВы чувствуете усиление  одышки.\n\nУ вас более выражены отеки на стопах,  лодыжках, ногах  или животе.\n\nВы  чувствуете себя более уставшим, нет сил.\n\nУ вас сухая, надсадный кашель.\n\nВы чувствуете головокружение.\n\nВы чувствуете беспокойство.\n\nВам стало труднее дышать в положении лежа. Вы вынуждены  спать  сидя в кресле.</string>
    <string name="green_zone_description">Нет одышки\n\nНет увеличения веса или есть снижение веса около 500-900г (эти изменения могут произойти в течение нескольких дней).\n\nНет отеков стоп, лодыжек, ног или живота.\n\nОтсутствуют боли в груди.</string>
    <string name="green_zone_subtitle">Стабильное состояние</string>
    <string name="yellow_zone_subtitle">Внимание - эта зона является предупреждением</string>
    <string name="red_zone_subtitle">Срочно обратитесь за помощью</string>
    <string name="skip_survey">Отложить опрос</string>
    <string name="link_relatives_number">Привязать телефон родственников</string>
    <string name="connect_relatives">Привяжите родственников</string>
    <string name="critical_situations">При критических ситуациях\nэто может спасти вам жизнь</string>
    <string name="fio">ФИО</string>
    <string name="number">Номер</string>
    <string name="phone_hint">8 (000) 000 00 00</string>
    <string name="fio_hint">Александр Александров Александрийский</string>
    <string name="first_relative">Первый родственник</string>
    <string name="successful_save">Данные успешно сохранены</string>
    <string name="reminder_successful_save">Напоминание успешно сохранено!</string>
    <string name="_7_00">7:00</string>
    <string name="unknown_error">Что-то пошло не так</string>
    <string name="default_notification_channel_id">alarm_channel_id_01</string>
    <string name="dont_forget_to_take_pills">Не забудьте принять лекарства!</string>
    <string name="todaysReminders">Напоминания на сегодня</string>
    <string name="food_recommendations">Рекомендации по полезным продуктам</string>
    <string name="error_no_relatives_data">Пожалуйста, введите данные хотя бы одного родственника</string>
    <string name="rationale_for_call_permission">Без этого разрешения вы не сможете быстро вызвать помощь</string>
    <string name="continue_text">Продолжить</string>
    <string name="success_send_reset">Данные для восстановления успешно отправлены!</string>
    <string name="error_try_again">Произошла ошибка. Попробуйте ещё раз.</string>
</resources>