<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/home_contentInfo"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="11dp"
    android:layout_marginTop="14dp"
    android:layout_marginEnd="11dp"
    android:background="@color/purple_100">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center_vertical"
            android:text="@string/info_title1"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/info1"
            android:layout_width="match_parent"
            android:layout_height="138dp"
            android:text="@string/info_desc1_red"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="43dp"
            android:gravity="center_vertical"
            android:text="@string/info_title2"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <androidx.cardview.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp">

            <VideoView
                android:layout_width="match_parent"
                android:layout_height="202dp"
                android:backgroundTint="#c4c4c4" />

            <!--deletable TextView-->
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="Видео"
                android:textColor="@color/black"
                android:textSize="18sp" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/info2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/info_desc2"
            android:textColor="@color/black" />
    </LinearLayout>
</androidx.core.widget.NestedScrollView>