<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.health.my_heart.ui.register.login.LoginFragment"
    android:background="@color/white">

    <TextView
        android:id="@+id/forgotPassword_title_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="40dp"
        android:text="Введите почту для восстановления пароля"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:fontFamily="@font/roboto"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/purple_300"/>

    <TextView
        android:id="@+id/forgotPassword_mail_text"
        android:text="@string/e_mail"
        app:layout_constraintBottom_toTopOf="@+id/forgotPassword_mail_et"
        app:layout_constraintEnd_toEndOf="@+id/forgotPassword_mail_et"
        app:layout_constraintHorizontal_bias="0.031"
        app:layout_constraintStart_toStartOf="@+id/forgotPassword_mail_et"
        style="@style/base_text_view_title_style" />

    <EditText
        android:id="@+id/forgotPassword_mail_et"
        style="@style/base_edit_text_style"
        app:layout_constraintTop_toBottomOf="@id/forgotPassword_title_text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="40dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email_hint"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/forgotPassword_send_btn"
        android:text="@string/send"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.92"
        style="@style/base_button_style" />

</androidx.constraintlayout.widget.ConstraintLayout>