<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/card_back1"
    android:backgroundTint="#00FFFFFF"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="8dp"
    android:paddingBottom="8dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/card_back1"
            android:backgroundTint="#7142BC"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:background="@drawable/card_back2">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:gravity="center"
                        android:text="@string/connect_relatives"
                        android:textColor="@color/white"
                        android:textSize="24sp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/critical_situations"
                        android:textColor="#D6D6D6"
                        android:textSize="12sp" />
                </LinearLayout>

            </FrameLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto"
                android:text="@string/first_relative"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="11dp"
                android:text="@string/fio"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dialogConnect_fio1_et"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edt_back"
                android:gravity="center_vertical"
                android:hint="@string/fio_hint"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dialogConnect_phone1_et"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edt_back"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="#DFDFDF" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:layout_marginLeft="20dp"
                android:fontFamily="@font/roboto"
                android:text="Второй родственник"
                android:textColor="@color/white"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:text="@string/fio"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dialogConnect_fio2_et"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edt_back"
                android:gravity="center_vertical"
                android:hint="@string/fio_hint"
                android:inputType="text"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="18dp"
                android:layout_marginEnd="20dp"
                android:text="@string/number"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/dialogConnect_phone2_et"
                android:layout_width="match_parent"
                android:layout_height="42dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="9dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/edt_back"
                android:hint="@string/phone_hint"
                android:inputType="phone"
                android:paddingStart="12dp"
                android:paddingEnd="12dp"
                android:textColor="@color/black"
                android:textColorHint="@color/gray"
                android:textSize="14sp" />

            <Button
                android:id="@+id/dialogConnect_submit_btn"
                style="@style/base_button_style"
                android:layout_marginTop="29dp"
                android:layout_marginBottom="27dp"
                android:text="@string/submit"
                android:textAllCaps="false"
                android:textColor="@color/white" />

        </LinearLayout>
    </ScrollView>
</FrameLayout>